# TaxMateLk

./: .env.example  .gitignore  .pytest_latest.txt  AI_CONTEXT_PROMPT.md  Dockerfile  README.md  REPORT.md  TaxMate_LK_Proposal_SHORT.docx  agent.py  agent_fixed.py  app.py  app_hf_spaces.py  deploy_hf.py  deployment_instructions.md  extract_pdfs.py  new_chat_resume_prompt.md  pyproject.toml  questions.txt  requirements.txt  requirements_hf.txt  run_app.md  test_suite.py  tools.py
eval/: eval_set.json  results.csv
knowledge_base/: APIT_Tax_Table_8_2025_26.txt  Amendment_Act_11_2026.txt  Gazette_2023_WHT_Expansion.txt  Guide_Income_Sources_Draft.txt  IRA_Consolidated_2025.txt  IRD_Practice_Note_2026_02.txt  IRD_Practice_Note_2026_03.txt  IR_Act_24_2017_Original.txt  IR_Amending_Act_June_2026.txt  IR_Amendment_Act_04_2023.txt  IR_Amendment_Act_45_2022.txt  Tax_Return_Guide_2022_23.txt
src/: __init__.py  agent.py  app.py  compare_models.py  ingest.py  tools.py
tests/: test_apis.py
