[project]
name = "taxmate-lk"
version = "0.1.0"
description = "AI tax advisory assistant for Sri Lankan freelancers - Noob Dev Capstone Project 03"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── LLM APIs ──────────────────────────────────────────
    "groq>=0.11.0",
    "google-genai>=0.2.0",

    # ── RAG Stack ─────────────────────────────────────────
    "chromadb>=0.5.23",
    "sentence-transformers>=3.3.1",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-groq>=0.1.9",

    # ── Document Processing ───────────────────────────────
    "pdfplumber>=0.11.4",
    "pypdf>=5.1.0",
    "tiktoken>=0.8.0",

    # ── HuggingFace (fine-tuning + deployment) ────────────
    "huggingface-hub>=0.27.0",
    "datasets>=2.21.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "trl>=0.10.1",
    "accelerate>=0.33.0",

    # ── UI ────────────────────────────────────────────────
    "gradio>=4.44.0",

    # ── Utilities ─────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
